<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">FroYo is premium self-serve frozen yogurt.</string>
    <string name="froyo">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter your Adress</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter Phone number</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter Note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="rawsberry">rawsberry</string>
    <string name="blueberry">blueberry</string>
    <string name="strawberry">strawberry</string>
    <string name="chocolate">chocolate</string>
    <string name="showtexts">ShowText</string>
    <string name="title_activity_order">Order Activity</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

</resources>
